# oot_module_example

./: README.md  README.rst
zephyr/: CMakeLists.txt  Kconfig  Makefile  README.rst  VERSION  module.yml  west.yml
zephyr/.known-issues/doc/: duplicate.conf  misc.conf
zephyr/apps/: index.rst
zephyr/boards/: index.rst
zephyr/boards/posix/oot_module_native_posix/doc/: CMakeLists.txt  index.rst
zephyr/cmake/: version.cmake
zephyr/doc/: CMakeLists.txt  LICENSING.rst  README.rst  conf.py  glossary.rst  index.rst  zephyr.doxyfile.in
zephyr/doc/_templates/: layout.html  zversions.html
zephyr/doc/contribute/: index.rst
zephyr/doc/getting_started/: index.rst
zephyr/doc/guides/: getting-help.rst  index.rst
zephyr/doc/introduction/: index.rst
zephyr/doc/module_development/: index.rst
zephyr/doc/reference/: index.rst  overview.rst  terminology.rst
zephyr/doc/reference/omx_module_hello/: index.rst
zephyr/doc/releases/: index.rst  release-notes-0.0.rst
zephyr/doc/scripts/: extract_content.py
zephyr/doc/security/: index.rst
zephyr/include/omx/: omx_module_hello.h
zephyr/manifests/zp/latest/: west.yml
zephyr/manifests/zp/zephyr-v2.3.0/: west.yml
zephyr/manifests/zp/zephyr-v2.4.0/: west.yml
zephyr/projects/: index.rst
zephyr/projects/example_project/: CMakeLists.txt  prj.conf  sample.yaml
zephyr/projects/example_project/doc/: index.rst
zephyr/projects/example_project/src/: main.c
zephyr/samples/: index.rst
zephyr/samples/module_hello/: README.rst  sample.yaml
zephyr/subsys/: CMakeLists.txt  Kconfig
zephyr/subsys/omx_module_hello/: CMakeLists.txt  Kconfig  hello.c
zephyr/tests/subsys/omx_module_hello/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/tests/subsys/omx_module_hello/src/: main.c
